name:               halcyon-tutorial
version:            1.0
build-type:         Simple
cabal-version:      >= 1.20

executable halcyon-tutorial
  main-is:            Main.hs
  default-language:   Haskell2010
  default-extensions: DataKinds,
                      DeriveGeneric,
                      OverloadedStrings,
                      TypeFamilies,
                      TypeOperators
  ghc-options:        -O2 -Wall -threaded
  build-depends:      base,
                      aeson,
                      servant,
                      servant-server,
                      stm,
                      text,
                      transformers,
                      warp
